Fix part switcher localizations

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -70,14 +70,16 @@ PART {
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_multiadapter_variant1
+			name = Two
+			title = #LOC_NFConstruction_switcher_multiadapter_variant1
 			transform = 2WayX
 			node = bottom01
 			node = bottom05
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_multiadapter_variant2
+			name = Four
+			title = #LOC_NFConstruction_switcher_multiadapter_variant2
 			transform = 2WayX
 			transform = 2WayY
 			node = bottom01
@@ -87,7 +89,8 @@ PART {
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_multiadapter_variant3
+			name = Six
+			title = #LOC_NFConstruction_switcher_multiadapter_variant3
 			transform = 2WayX
 			transform = 6Way
 			node = bottom01
@@ -99,7 +102,8 @@ PART {
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_multiadapter_variant4
+			name = Eight
+			title = #LOC_NFConstruction_switcher_multiadapter_variant4
 			transform = 2WayX
 			transform = 2WayY
 			transform = 4Way
