--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
@@ -55,11 +55,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTERSML
 			transform = COLLIDER_CTRSML
 			addedMass = 0.125
@@ -73,7 +75,8 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSSML
 			transform = COLLIDER_OUTERSMLB01
 			transform = COLLIDER_OUTERSMLB02
@@ -89,7 +92,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_truss_variant3
+			name = Saddle
+			title = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSMLSADDLE
 			transform = COLLIDER_OUTERSMLB01
 			transform = COLLIDER_OUTERSMLB02
@@ -101,7 +105,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSSMLHOLLOW
 			addedMass = -0.2
 			addedCost = -540
@@ -114,11 +119,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOPSML
 			transform = COLLIDER_TOPSML
@@ -133,11 +140,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOMSML
 			transform = COLLIDER_BOTTOMSML
