--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
@@ -55,11 +55,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTERMINI
 			transform = COLLIDER_CTRMINI
 			addedMass = 0.0625
@@ -73,7 +75,8 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSMINI
 			transform = COLLIDER_OUTERMINIB01
 			transform = COLLIDER_OUTERMINIB02
@@ -88,7 +91,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant3
+			name = Saddle
+			title = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSMINISADDLE
 			transform = COLLIDER_OUTERMINIB01
 			transform = COLLIDER_OUTERMINIB02
@@ -100,7 +104,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSMINIHOLLOW
 			addedMass = -0.1
 			addedCost = -270
@@ -113,11 +118,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOPMINI
 			transform = COLLIDER_TOPMINI
@@ -132,11 +139,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name =  Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOMMINI
 			transform = COLLIDER_BOTTOMMINI
