--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -65,14 +65,16 @@ PART
 		baseVolume = 6000
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoLarge
 			transform = COLLISION15
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoLargeHollow
 			transform = OctoLargeHollowStruct
 			transform = COLLISION09
@@ -90,7 +92,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant3
+			name = Saddle
+			title= #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoLargeHollowSaddle
 			transform = OctoLargeHollowStructSaddle
 			transform = COLLISION09
@@ -106,7 +109,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title=  #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoLargeHollowHalf
 			transform = OctoLargeHollowStructHalf
 			transform = COLLISION09
@@ -121,7 +125,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+			name = LFO
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -131,7 +136,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+			name = LF
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -142,7 +148,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+			name = Ox
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -152,7 +159,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+			name = Support
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -163,7 +171,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+			name = Xenon
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
 			transform = OctoLargeBare
 			transform = COLLISION15
@@ -173,7 +182,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+			name = Ore
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
 			transform = OctoLargeBare
 			transform = COLLISION15
