--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -55,14 +55,16 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name =  Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoSmall
 			transform = COLLISION13
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoSmallHollow
 			transform = OctoSmallHollowStruct
 			transform = COLLISION01
@@ -79,7 +81,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant3
+			name = Saddle
+			title= #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoSmallHollowSaddle
 			transform = OctoSmallHollowStructSaddle
 			transform = COLLISION02
@@ -95,7 +98,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title= #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoSmallHollowHalf
 			transform = OctoSmallHollowStructHalf
 			transform = COLLISION02
