--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -54,7 +54,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_angle_variant1
+			name = 90 Degrees
+			title = #LOC_NFConstruction_switcher_angle_variant1
 			node = top01
 			transform = Truss90A
 			transform = Truss90B
@@ -63,7 +64,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_angle_variant2
+			name = 45 Degrees
+			title= #LOC_NFConstruction_switcher_angle_variant2
 			node = top02
 			transform = Truss45A
 			transform = Truss45B
@@ -75,7 +77,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_angle_variant3
+			name = 30 Degrees
+			title= #LOC_NFConstruction_switcher_angle_variant3
 			node = top03
 			transform = Truss30A
 			transform = Truss30B
