--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -51,7 +51,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_attach_variant1
+			name = Angled
+			title= #LOC_NFConstruction_switcher_attach_variant1
 			transform = OctoAttach
 			transform = COLLISION
 
@@ -59,7 +60,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_attach_variant2
+			name = Angled Hollow
+			title= #LOC_NFConstruction_switcher_attach_variant2
 			transform = OctoAttachHollow
 			transform = COLLISION
 			addedCost = -75
@@ -67,14 +69,16 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_attach_variant3
+			name = Ortho
+			title= #LOC_NFConstruction_switcher_attach_variant3
 			transform = OctoAttachAlt
 			transform = COLLISIONALT
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_attach_variant4
+			name = Ortho Hollow
+			title= #LOC_NFConstruction_switcher_attach_variant4
 			transform = OctoAttachAltHollow
 			transform = COLLISIONALT
 			addedCost = -75
