--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -62,7 +62,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeMedium
 			transform = OctoMedium001
 			transform = COLLISION032
@@ -70,7 +71,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeMedium
 			transform = OctoMedHollowCrew
 			transform = OctoMedHollowStructCrew
@@ -87,7 +89,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title= #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeMedium
 			transform = OctoMedHollowHalfCrew
 			transform = OctoMedHollowStructHalfCrew
