--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -61,7 +61,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeSmall
 			transform = OctoSmall001
 			transform = COLLISION031
@@ -69,7 +70,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeSmall
 			transform = OctoSmallHollowCrew
 			transform = OctoSmallHollowStructCrew
@@ -86,7 +88,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title= #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeSmall
 			transform = OctoSmallHollowHalfCrew
 			transform = OctoSmallHollowStructHalfCrew
