--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
@@ -55,11 +55,13 @@ PART
 		switcherDescription =#LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREMED
 			transform = COLLIDERMEDCORE
 			addedMass = 0.1
@@ -73,7 +75,8 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSMED
 			transform = COLLIDERMED01
 			transform = COLLIDERMED02
@@ -82,7 +85,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant3
+			name = Saddle
+			title = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSMEDSADDLE
 			transform = COLLIDERMED04
 			transform = COLLIDERMED02
@@ -93,7 +97,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_truss_variant4
+			name = Dual
+			title = #LOC_NFConstruction_switcher_truss_variant4
 			transform = TRUSSMEDDUAL
 			transform = COLLIDERMED03
 			transform = COLLIDERMED04
@@ -102,7 +107,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant5
+			name = Frame
+			title = #LOC_NFConstruction_switcher_truss_variant5
 			transform = TRUSSMEDFRAME
 			addedMass = -0.175
 			addedCost = -225
@@ -116,7 +122,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
@@ -126,7 +133,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Soild
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
@@ -135,7 +143,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_endcap_variant3
+			name = None
+			title = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
@@ -149,7 +158,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
@@ -159,7 +169,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
@@ -168,7 +179,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant3
+			name = None
+			title = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
