--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-01.cfg
@@ -54,11 +54,14 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
+
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREADAPT01
 			transform = COLLIDERADAPT01CORE
 			addedMass = 0.05
