--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -50,11 +50,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = COREADAPT02
 			transform = COLLIDERADAPT02CORE
 			addedMass = 0.05
