--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -55,11 +55,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_core_variant2
 			transform = CENTER
 			transform = COLLIDER_CTR
 			addedMass = 0.25
@@ -73,7 +75,8 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSS
 			transform = COLLIDER_OUTERB001
 			transform = COLLIDER_OUTERB002
@@ -88,7 +91,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_truss_variant3
+			name =  Saddle
+			title = =#LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSADDLE
 			transform = COLLIDER_OUTERB001
 			transform = COLLIDER_OUTERB002
@@ -100,7 +104,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_truss_variant2
 			transform = TRUSSHOLLOW
 			addedMass = -0.4
 			addedCost = -1080
@@ -113,11 +118,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title1
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TOP
 			transform = COLLIDER_TOP
@@ -132,11 +139,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_endcap_title2
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+			title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = BOTTOM
 			transform = COLLIDER_BOTTOM
