--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -56,14 +56,16 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = LargeTruss
 			transform = COLLIDERLRG
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = LargeTrussHollow
 			transform = COLLIDEREND004
 			transform = COLLIDEREND005
