--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -56,14 +56,16 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = MediumTruss
 			transform = COLLIDERMED
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = MediumTrussHollow
 			transform = COLLIDEREND002
 			transform = COLLIDEREND003
