--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -56,14 +56,16 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = SmallTruss
 			transform = COLLIDERSML
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title = #LOC_NFConstruction_switcher_subtype_variant2
 			transform = SmallTrussHollow
 			transform = COLLIDEREND
 			transform = COLLIDEREND001
