--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -65,14 +65,16 @@ PART
 		baseVolume = 3000
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name =  Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoMedium
 			transform = COLLISION14
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name =  Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoMedHollow
 			transform = OctoMedHollowStruct
 			transform = COLLISION05
@@ -89,7 +91,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant3
+			name = Saddle
+			title= #LOC_NFConstruction_switcher_subtype_variant3
 			transform = OctoMedHollowSaddle
 			transform = OctoMedHollowStructSaddle
 			transform = COLLISION05
@@ -105,7 +108,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title= #LOC_NFConstruction_switcher_subtype_variant4
 			transform = OctoMedHollowHalf
 			transform = OctoMedHollowStructHalf
 			transform = COLLISION05
@@ -120,7 +124,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+			name = LFO
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -130,7 +135,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+			name = LF
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -140,7 +146,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+			name = Ox
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -150,7 +157,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+			name = Support
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -161,7 +169,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+			name = Xenon
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
 			transform = OctoMedBare
 			transform = COLLISION14
@@ -171,7 +180,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+			name = Ore
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
 			transform = OctoMedBare
 			transform = COLLISION14
