--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -55,14 +55,16 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name =  Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoEighth
 			transform = COLLISIONNANO
 		}
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = OctoEighthHollow
 			transform = OctoEighthHollowCore
 			transform = COLLISION01
