--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
@@ -62,7 +62,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant1
+			name =Solid
+			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = TubeLrg
 			transform = OctoLarge001
 			transform = COLLISION15
@@ -70,7 +71,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant2
+			name = Hollow
+			title= #LOC_NFConstruction_switcher_subtype_variant2
 			transform = TubeLrg
 			transform = OctoLargeHollowCrew
 			transform = OctoLargeHollowStructCrew
@@ -87,7 +89,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_subtype_variant4
+			name = Dual
+			title= #LOC_NFConstruction_switcher_subtype_variant4
 			transform = TubeLrg
 			transform = OctoLargeHollowHalfCrew
 			transform = OctoLargeHollowStructHalfCrew
