--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -55,11 +55,13 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_core_title
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_core_variant1
+			name = None
+			title = #LOC_NFConstruction_switcher_core_variant1
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_core_variant2
+			name = Solid
+  		title = #LOC_NFConstruction_switcher_core_variant2
 			transform = CORESML
 			transform = COLLIDERSMLCORE
 			addedMass = 0.05
@@ -73,7 +75,8 @@ PART
 		switcherDescription = #LOC_NFConstruction_switcher_truss_title
 		SUBTYPE
 		{
-			name = S#LOC_NFConstruction_switcher_truss_variant1
+			name = Solid
+			title = #LOC_NFConstruction_switcher_truss_variant1
 			transform = TRUSSSML
 			transform = COLLIDERSML01
 			transform = COLLIDERSML02
@@ -82,7 +85,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant3
+			name = Saddle
+  		title = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSMLSADDLE
 			transform = COLLIDERSML04
 			transform = COLLIDERSML02
@@ -93,7 +97,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_truss_variant4
+			name = Dual
+			title = #LOC_NFConstruction_switcher_truss_variant4
 			transform = TRUSSSMLDUAL
 			transform = COLLIDERSML03
 			transform = COLLIDERSML04
@@ -103,7 +108,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_truss_variant5
+			name = Frame
+  		title = #LOC_NFConstruction_switcher_truss_variant5
 			transform = TRUSSSMLFRAME
 			addedMass = 0.0875
 			addedCost = -112.5
@@ -117,7 +123,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+  		title = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSTOP
 			transform = COLLIDERTOPA01
@@ -127,7 +134,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+  		title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TRUSSTOPSOLID
 			transform = COLLIDERTOPB
@@ -136,7 +144,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant3
+			name = None
+  		title = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
@@ -150,7 +159,8 @@ PART
 
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant1
+			name = Basic
+  		title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = TRUSSBOT
 			transform = COLLIDERBOTA01
 			transform = COLLIDERBOTA02
@@ -159,7 +169,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name = #LOC_NFConstruction_switcher_endcap_variant2
+			name = Solid
+  		title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = bottom02
 			transform = TRUSSBOTSOLID
 			transform = COLLIDERBOTB
@@ -168,7 +179,8 @@ PART
 		}
 		SUBTYPE
 		{
-			name =#LOC_NFConstruction_switcher_endcap_variant3
+			name = None
+			title = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
