--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -9,6 +9,7 @@
   {
     %SUBTYPE[LH2OCryo]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
       tankType = LH2OCryo
       transform = OctoLargeBare
       transform = COLLISION15
@@ -18,6 +19,7 @@
     }
     %SUBTYPE[LH2Cryo]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
       tankType = LH2Cryo
       transform = OctoLargeBare
       transform = COLLISION15
@@ -27,6 +29,7 @@
     }
     %SUBTYPE[Lithium]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Li
       tankType = Lithium
       transform = OctoLargeBare
       transform = COLLISION15
@@ -36,6 +39,7 @@
     }
     %SUBTYPE[Argon]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
       tankType = Argon
       transform = OctoLargeBare
       transform = COLLISION15
@@ -68,6 +72,7 @@
   {
     %SUBTYPE[LH2OCryo]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
       tankType = LH2OCryo
       transform = OctoMedBare
       transform = COLLISION14
@@ -77,6 +82,7 @@
     }
     %SUBTYPE[LH2Cryo]
     {
+      title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
       tankType = LH2Cryo
       transform = OctoMedBare
       transform = COLLISION14
@@ -86,6 +92,7 @@
     }
     %SUBTYPE[Lithium]
     {
+      title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
       tankType = Lithium
       transform = OctoMedBare
       transform = COLLISION14
@@ -95,6 +102,7 @@
     }
     %SUBTYPE[Argon]
     {
+      title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
       tankType = Argon
       transform = OctoMedBare
       transform = COLLISION14
