Localize part search tags

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-3.cfg
@@ -46,5 +46,5 @@ PART {
 thermalMassModifier = 0.4 // I am hollow
 	fuelCrossFeed = True
 	NoCrossFeedNodeKey = bottom
-	tags = connect frame scaffold structur strut truss nearfuture adapter stack multi three ?3
+	tags = #LOC_NFConstruction_adapter-125-0625-3_tags
 }
