--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
@@ -42,5 +42,5 @@ PART
 	maxTemp = 2000
 	fuelCrossFeed = True
 
-	tags = connect frame scaffold structur strut truss nearfuture
+	tags = #LOC_NFConstruction_adapter-25-125_tags
 }
