--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -60,7 +60,7 @@ PART {
 	thermalMassModifier = 0.4 // I am hollow
 	fuelCrossFeed = True
 
-	tags = connect frame scaffold structur strut truss nearfuture adapter stack multi two four six eight ?2 ?4 ?6 ?8
+	tags = #LOC_NFConstruction_adapter-25-multi-1_tags 
 
 	MODULE
 	{
