--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25-1.cfg
@@ -44,5 +44,5 @@ PART
 	fuelCrossFeed = True
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture radial
+	tags = #LOC_NFConstruction_adapter-375-25-1_tags
 }
