--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
@@ -44,5 +44,5 @@ PART
 	breakingForce = 100
 	breakingTorque = 100
 
-	tags = connect frame scaffold structur strut truss nearfuture radial
+	tags = #LOC_NFConstruction_adapter-rad-125_tags
 }
