--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
@@ -44,6 +44,6 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture hex adapter stack
+	tags = #LOC_NFConstruction_truss-hex-adapter-01_tags 
 
 }
