--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -46,7 +46,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture
+	tags = #LOC_NFConstruction_truss-octo-1_tags
 
 	MODULE
 	{
