--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
@@ -32,7 +32,7 @@ PART
 
 	bulkheadProfiles = octotruss, srf
 
-	tags = connect frame scaffold structur strut truss nearfuture octo adapter pressur crew
+	tags = #LOC_NFConstruction_truss-octo-adapter-crew-1_tags 
 
 	// --- standard part parameters ---
 	mass = 0.14
