--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -44,7 +44,7 @@ PART
 	maxTemp = 1000
 	thermalMassModifier = 0.7 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture pressu crew
+	tags = #LOC_NFConstruction_truss-octo-crew-2_tags
 	MODULE
 	{
 		name = ModuleAnimateGeneric
