--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -44,7 +44,7 @@ PART
 	explosionPotential = 0
 	vesselType = Probe
 
-	tags = cmg command control (core fly gyro moment probe react sas satellite space stab steer torque connect frame scaffold structur strut truss
+	tags = #LOC_NFConstruction_truss-octo-drone-1_tags
 
 	MODULE
 	{
