--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-01.cfg
@@ -48,5 +48,5 @@ PART
 	maxTemp = 2000
 	fuelCrossFeed = True
 
-	tags = connect frame scaffold structur strut truss nearfuture octo center central hub nexus
+	tags = #LOC_NFConstruction_truss-octo-hub-1_tags
 }
