--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-crew-01.cfg
@@ -47,5 +47,5 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	fuelCrossFeed = True
-	tags = connect frame scaffold structur strut truss nearfuture octo center central hub nexus crew pressur
+	tags = #LOC_NFConstruction_truss-octo-hub-crew-1_tags
 }
