--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
@@ -48,6 +48,6 @@ thermalMassModifier = 0.4 // I am hollow
 	fuelCrossFeed = True
 	NoCrossFeedNodeKey = bottom
 
-	tags = connect frame scaffold structur strut truss nearfuture adapter stack multi four ?4
+	tags = #LOC_NFConstruction_adapter-125-0625-4_tags
 
 }
