--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -45,5 +45,5 @@ PART
 	breakingForce = 50
 	breakingTorque = 50
 
-	tags = connect frame scaffold structur strut truss nearfuture radial
+	tags = #LOC_NFConstruction_adapter-rad-0625_tags
 }
