--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
@@ -44,7 +44,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss circle nearfuture adapt annul
+	tags = #LOC_NFConstruction_truss-circular-adapter-02_tags
 
 
 }
