--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -45,7 +45,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture
+	tags = #LOC_NFConstruction_truss-octo-3_tags
 
 	MODULE
 	{
