--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
@@ -44,7 +44,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture octo adapter stack
+	tags = #LOC_NFConstruction_truss-octo-adapter-1_tags
 
 
 }
