--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -45,7 +45,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture radial octo crew pres tube can
+	tags = #LOC_NFConstruction_truss-octo-angled-crew-1_tags
 	MODULE
 	{
 		name = ModuleB9PartSwitch
