--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -42,7 +42,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture radial octo
+	tags = #LOC_NFConstruction_truss-octo-attach-1_tags
 	MODULE
 	{
 		name = ModuleB9PartSwitch
