--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-03.cfg
@@ -46,7 +46,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine
+	tags = #LOC_NFConstruction_truss-spinal-03_tags
 
 	MODULE
 	{
