--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -42,7 +42,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss saddle hollow nearfuture square spine adapt
+	tags = #LOC_NFConstruction_truss-spinal-adapter-02_tags
 	MODULE
 	{
 		name = ModuleB9PartSwitch
