Hibernation for drone core

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -55,6 +55,8 @@ PART
 			name = ElectricCharge
 			rate = 0.08
 		}
+		hasHibernation = True
+		hibernationMultiplier = 0.00125
 	}
 	MODULE
 	{
@@ -96,8 +98,8 @@ PART
 		AnomalyDetection = 0.3
 		DISPLAY_MODES
 		{
-			Mode = Biome
-			Mode = Terrain
+			Mode = Biome,#autoLOC_438890 //#autoLOC_438890 = Biome
+			Mode = Terrain,#autoLOC_438839 //#autoLOC_438839 = Terrain
 		}
 	}
 	MODULE
@@ -117,8 +119,8 @@ PART
 	{
 		name = ModuleScienceContainer
 
-		reviewActionName = Review Stored Data
-		storeActionName = Store Experiments
+		reviewActionName = #autoLOC_502201 //#autoLOC_502201 = Review Stored Data
+		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
 		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
 		storageRange = 1.3
 		canBeTransferredToInVessel = True
