Fix localization bugs

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -92,7 +92,7 @@ PART
 		SUBTYPE
 		{
 			name =  Saddle
-			title = =#LOC_NFConstruction_switcher_truss_variant3
+			title = #LOC_NFConstruction_switcher_truss_variant3
 			transform = TRUSSSADDLE
 			transform = COLLIDER_OUTERB001
 			transform = COLLIDER_OUTERB002
