--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -50,7 +50,7 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = A#LOC_NFConstruction_switcher_angle_title
+		switcherDescription = #LOC_NFConstruction_switcher_angle_title
 
 		SUBTYPE
 		{
