Update for new B9PS

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -60,7 +60,7 @@ PART {
 	thermalMassModifier = 0.4 // I am hollow
 	fuelCrossFeed = True
 
-	tags = #LOC_NFConstruction_adapter-25-multi-1_tags 
+	tags = #LOC_NFConstruction_adapter-25-multi-1_tags
 
 	MODULE
 	{
@@ -73,6 +73,7 @@ PART {
 			name = Two
 			title = #LOC_NFConstruction_switcher_multiadapter_variant1
 			transform = 2WayX
+			stacksSymmetry = 1
 			node = bottom01
 			node = bottom05
 		}
@@ -83,6 +84,7 @@ PART {
 			transform = 2WayX
 			transform = 2WayY
 			node = bottom01
+			stacksSymmetry = 3
 			node = bottom05
 			node = bottom03
 			node = bottom07
@@ -93,6 +95,7 @@ PART {
 			title = #LOC_NFConstruction_switcher_multiadapter_variant3
 			transform = 2WayX
 			transform = 6Way
+			stacksSymmetry = 5
 			node = bottom01
 			node = bottom05
 			node = bottom09
@@ -107,6 +110,7 @@ PART {
 			transform = 2WayX
 			transform = 2WayY
 			transform = 4Way
+			stacksSymmetry = 7
 			node = bottom01
 			node = bottom02
 			node = bottom03
