--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -17,9 +17,8 @@ PART
 
 		node_stack_top01 = 0.0, 1.199, 1.244, 0.0, 0.0, 1.0, 2
 	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
-	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.66666, 0.33333, 2
+	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.86602540378, 0.5, 2
 	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
-
 
 	bulkheadProfiles = octotruss, srf
 
