Updating tank types to align with balance changes to Near Future Propulsion and CryoTanks.

--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -2,49 +2,49 @@
 B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 {
 	name = LH2OCryo
-	tankMass = 0.0004
+	tankMass = 0.000233745
 	tankCost = 0
 
 	RESOURCE
 	{
 		name = LqdHydrogen
-		unitsPerVolume = 6
+		unitsPerVolume = 3
 	}
 	RESOURCE
 	{
 		name = Oxidizer
-		unitsPerVolume = 0.4
+		unitsPerVolume = 0.2
 	}
 }
 B9_TANK_TYPE:NEEDS[CommunityResourcePack&!CryoTanks]
 {
 	name = LH2Cryo
-	tankMass =  0.00025
-	tankCost = 0
+	tankMass =  0.00007085000
+	tankCost = 0.2
 
 	RESOURCE
 	{
 		name = LqdHydrogen
-		unitsPerVolume = 10
+		unitsPerVolume = 5
 	}
 }
 B9_TANK_TYPE:NEEDS[CommunityResourcePack]
 {
 	name = Lithium
-	tankMass = 0.0010146
-	tankCost = 0
+	tankMass = 0.00089
+	tankCost = 9.5625
 
 	RESOURCE
 	{
 		name = Lithium
-		unitsPerVolume = 3.325
+		unitsPerVolume = 5
 	}
 }
 B9_TANK_TYPE:NEEDS[CommunityResourcePack]
 {
 	name = Argon
-	tankMass =  0.00139375
-	tankCost = 0
+	tankMass =  0.000594667
+	tankCost = 2.5
 
 	RESOURCE
 	{
@@ -95,18 +95,24 @@ B9_TANK_TYPE
 {
 	name = Xenon
 	tankMass = 0.00123046875
-	tankCost = 0.00
+	tankCost = 4.5
 	RESOURCE
 	{
 		name = XenonGas
 		unitsPerVolume = 15.75
 	}
 }
+
+@B9_TANK_TYPE[Xenon]:NEEDS[NearFuturePropulsion]
+{
+	@tankMass = 0.000525
+}
+
 B9_TANK_TYPE
 {
 	name = MPEC
 	tankMass = 0.000225
-	tankCost = 0.00
+	tankCost = 1.33333333333
 	RESOURCE
 	{
 		name = MonoPropellant
@@ -122,7 +128,7 @@ B9_TANK_TYPE
 {
 	name = Ore
 	tankMass = 0.00133333333
-	tankCost = 0.00
+	tankCost = 0.83333333333
 	RESOURCE
 	{
 		name = Ore
