--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-crew-01.cfg
@@ -13,6 +13,13 @@ PART
 		scale = 1,1,1
 		rotation = 0, 0, 0
 	}
+	MODEL
+	{
+		model = NearFutureConstruction/Parts/Truss/truss-octo/sspx-endcap-25-1
+		position = 0.0, -0.3661254, 0.0
+		scale = 1,-1,1
+		rotation = 0, 0, 0
+	}
 	rescaleFactor = 1
 
 	node_stack_top = 0.0, 0.3473907, 0.0, 0.0, 1.0, 0.0, 3
@@ -45,4 +52,72 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	thermalMassModifier = 0.4 // I am hollow
+	tags = #LOC_SSPX_sspx-tube-25-1_tags
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = endcapSwitch
+		switcherDescription = #LOC_SSPX_Switcher_EndcapsUpper_Name
+
+		SUBTYPE
+		{
+			name = BlackHandles
+			title = #LOC_SSPX_Switcher_Endcaps_Black_Handles
+		transform = 25mCapBlack
+		}
+		SUBTYPE
+		{
+			name = WhiteHandles
+			title = #LOC_SSPX_Switcher_Endcaps_White_Handles
+      transform = 25mCapWhite
+		}
+		SUBTYPE
+		{
+			name = Black
+			title = #LOC_SSPX_Switcher_Endcaps_Black
+      transform = 25mCapBlackBare
+		}
+		SUBTYPE
+		{
+			name = White
+			title = #LOC_SSPX_Switcher_Endcaps_White
+		transform = 25mCapWhiteBare
+		}
+	}
 }
