--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -47,6 +47,42 @@ PART
 	tags = #LOC_NFConstruction_truss-octo-angled-crew-1_tags
 	MODULE
 	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = #LOC_NFConstruction_switcher_angle_title
@@ -56,9 +92,7 @@ PART
 			name = 90 Degrees
 			title = #LOC_NFConstruction_switcher_angle_variant1
 			node = top01
-			transform = Truss90A
-			transform = Truss90B
-			transform = Truss90Crew
+			transform = Angled90
 		}
 
 		SUBTYPE
@@ -66,11 +100,7 @@ PART
 			name = 45 Degrees
 			title= #LOC_NFConstruction_switcher_angle_variant2
 			node = top02
-			transform = Truss45A
-			transform = Truss45B
-			transform = Truss45CrewA
-			transform = Truss45CrewB
-			transform = COLLISION45D
+			transform = Angled45
 			addedCost = -250
 			addedMass = -0.125
 		}
@@ -79,11 +109,7 @@ PART
 			name = 30 Degrees
 			title= #LOC_NFConstruction_switcher_angle_variant3
 			node = top03
-			transform = Truss30A
-			transform = Truss30B
-			transform = Truss30CrewA
-			transform = Truss30CrewB
-			transform = COLLISION30D
+			transform = Angled30
 			addedCost = -350
 			addedMass = -0.17
 		}
