Config changes and fixes to support new parts

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -78,7 +78,57 @@ PART
 			addedMass = -0.02
 			addedCost = -75
 		}
+		SUBTYPE
+		{
+			name = LFO
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
+			tankType = LFOX
+			transform =
+			addedCost = 2696
+			crashTolerance = 50
+		}
+		SUBTYPE
+		{
+			name = LF
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
+			tankType = LF
+			transform =
+			addedCost = 2696
+			crashTolerance = 50
 
+		}
+		SUBTYPE
+		{
+			name = Ox
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
+			tankType = OX
+			transform =
+			crashTolerance = 50
+		}
+		SUBTYPE
+		{
+			name = Support
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
+			tankType = MPEC
+			transform =
+			crashTolerance = 50
+		}
+		SUBTYPE
+		{
+			name = Xenon
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
+			tankType = Xenon
+			transform =
+			crashTolerance = 50
+		}
+		SUBTYPE
+		{
+			name = Ore
+			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
+			tankType = Ore
+			transform =
+			crashTolerance = 50
+		}
 
 	}
 }
