--- a/GameData/NearFutureConstruction/Localization/en-us.cfg
+++ b/GameData/NearFutureConstruction/Localization/en-us.cfg
@@ -35,6 +35,11 @@ Localization
     #LOC_NFConstruction_switcher_truss_variant4 = Dual
     #LOC_NFConstruction_switcher_truss_variant5 = Frame
 
+    #LOC_NFConstruction_switcher_profile_title = Profile
+    #LOC_NFConstruction_switcher_profile_square = Square
+    #LOC_NFConstruction_switcher_profile_triangular = Triangular
+    #LOC_NFConstruction_switcher_profile_planar = Triangular
+
     #LOC_NFConstruction_switcher_endcap_title1 = Upper Cap
     #LOC_NFConstruction_switcher_endcap_title2 = Lower Cap
     #LOC_NFConstruction_switcher_endcap_variant1 = Basic
@@ -61,6 +66,12 @@ Localization
     #LOC_NFConstruction_switcher_multiadapter_variant2 = Four
     #LOC_NFConstruction_switcher_multiadapter_variant3 = Six
     #LOC_NFConstruction_switcher_multiadapter_variant4 = Eight
+
+    #LOC_NFConstruction_switcher_endcaps_name = Endcap
+    #LOC_NFConstruction_switcher_endcaps_black = Classic (Bare)
+    #LOC_NFConstruction_switcher_endcaps_black_handles = Classic
+    #LOC_NFConstruction_switcher_endcaps_white = Insulated (Bare)
+    #LOC_NFConstruction_switcher_endcaps_white_handles = Insulated
 
     // PARTS
     // Hex Girder
@@ -177,6 +188,21 @@ Localization
     #LOC_NFConstruction_truss-circular-docking-01_description = A high strength docking connector of significant size. Hollow!
     #LOC_NFConstruction_truss-circular-docking-01_tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
 
+    // Micro Truss
+    #LOC_NFConstruction_truss-micro-01_title =
+    #LOC_NFConstruction_truss-micro-01_description =
+    #LOC_NFConstruction_truss-micro-01_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-02_title =
+    #LOC_NFConstruction_truss-micro-02_description =
+    #LOC_NFConstruction_truss-micro-02_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-03_title =
+    #LOC_NFConstruction_truss-micro-03_description =
+    #LOC_NFConstruction_truss-micro-03_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+
+    #LOC_NFConstruction_truss-micro-adapter-01_title =
+    #LOC_NFConstruction_truss-micro-adapter-01_description =
+    #LOC_NFConstruction_truss-micro-adapter-01_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+
     // adapters
     #LOC_NFConstruction_adapter-25-125_title = Rockomax Skeletal Structural Adapter
     #LOC_NFConstruction_adapter-25-125_description = A barebones adapter from Rockomax that upholds the company's reputation for quality bargain-bin parts.
@@ -195,15 +221,17 @@ Localization
     #LOC_NFConstruction_adapter-125-0625-4_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi four ?4
     #LOC_NFConstruction_adapter-375-25-1_title = Rockomax Skeletal XL Structural Adapter
     #LOC_NFConstruction_adapter-375-25-1_description = Rockomax's first hurried attempt to enter the Kerbodyne-dominated extra-large parts market was met with limited applause.
-    #LOC_NFConstruction_adapter-375-25-1_tags = connect frame scaffold structur strut truss nearfuture
-
+    #LOC_NFConstruction_adapter-375-25-1_tags = connect frame scaffold adapt structur strut truss nearfuture
+    #LOC_NFConstruction_adapter-375-25-2_title = Kerbodyne Skeletal Structural Adapter
+    #LOC_NFConstruction_adapter-375-25-2_description =
+    #LOC_NFConstruction_adapter-375-25-2_tags = connect frame scaffold adapt structur strut truss nearfuture
 
     #LOC_NFConstruction_adapter-rad-0625_title = S-MINI Radial Stack Adapter
     #LOC_NFConstruction_adapter-rad-0625_description = A pretty tiny radial stack adapter for 0.625m stacks. Now we don't need to use large tanks full of explosive fuels to do this. It's a win-win situation!
-    #LOC_NFConstruction_adapter-rad-0625_tags = connect frame scaffold structur strut truss nearfuture radial
+    #LOC_NFConstruction_adapter-rad-0625_tags = connect frame scaffold structur strut truss nearfuture adapt radial
     #LOC_NFConstruction_adapter-rad-125_title = S-MED Radial Stack Adapter
     #LOC_NFConstruction_adapter-rad-125_description = A radial stack adapter for 1.25m stacks. Studies show that this could increase the ease of building rockets by up to 16.2%.
-    #LOC_NFConstruction_adapter-rad-125_tags = connect frame scaffold structur strut truss nearfuture radial
+    #LOC_NFConstruction_adapter-rad-125_tags = connect frame scaffold structur strut truss nearfuture adapt radial
 
   }
 }
