Stock xenon tanks now 1/4 tankage.

--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -94,18 +94,13 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = Xenon
-	tankMass = 0.00123046875
+	tankMass = 0.000525
 	tankCost = 4.5
 	RESOURCE
 	{
 		name = XenonGas
 		unitsPerVolume = 15.75
 	}
-}
-
-@B9_TANK_TYPE[Xenon]:NEEDS[NearFuturePropulsion]
-{
-	@tankMass = 0.000525
 }
 
 B9_TANK_TYPE
