Additional work on hex truss tanks

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -50,10 +50,19 @@ PART
 
 	MODULE
 	{
+		name = ModuleB9DisableTransform
+		transform = HexArTankLrg
+		transform = HexLH2OTankLrg
+		transform = HexLH2TankLrg
+		transform = HexLiTankLrg
+	}
+	
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-
+		baseVolume = 800
 		SUBTYPE
 		{
 			name = Solid
@@ -83,7 +92,9 @@ PART
 			name = LFO
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
-			transform =
+			transform = HexLFOTankLong
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			addedCost = 2696
 			crashTolerance = 50
 		}
@@ -92,7 +103,9 @@ PART
 			name = LF
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
-			transform =
+			transform = HexLFTankLong
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			addedCost = 2696
 			crashTolerance = 50
 
@@ -102,7 +115,9 @@ PART
 			name = Ox
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
-			transform =
+			transform = HexOXTankLong
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -110,7 +125,9 @@ PART
 			name = Support
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
-			transform =
+			transform = HexMPTankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -118,7 +135,9 @@ PART
 			name = Xenon
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
-			transform =
+			transform = HexXeTankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -126,7 +145,9 @@ PART
 			name = Ore
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
-			transform =
+			transform = HexOreTankLong
+			transform = LargeTruss
+			transform = COLLIDERLRG
 			crashTolerance = 50
 		}
 	}
