--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -132,9 +132,9 @@
     {
       title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
       tankType = LH2OCryo
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LH2OXTankMed
+      transform = HexLH2OTankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
       addedCost = 1348
       crashTolerance = 50
     }
@@ -142,9 +142,9 @@
     {
       title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
       tankType = LH2Cryo
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LH2TankMed
+      transform = HexLH2TankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
       addedCost = 1348
       crashTolerance = 50
     }
@@ -152,18 +152,18 @@
     {
       title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
       tankType = Lithium
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LithiumTankMed
+      transform = HexLiTankLrg
+	transform = LargeTruss
+	transform = COLLIDERLRG
       crashTolerance = 50
     }
     %SUBTYPE[Argon]
     {
       title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
       tankType = Argon
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = ArgonTankMed
+      transform = HexArTankLrg
+			transform = LargeTruss
+			transform = COLLIDERLRG
       crashTolerance = 50
     }
   }
@@ -193,9 +193,9 @@
     {
       title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
       tankType = LH2OCryo
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LH2OXTankMed
+      transform = HexLH2OTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
     }
@@ -203,9 +203,9 @@
     {
       title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2
       tankType = LH2Cryo
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LH2TankMed
+      transform = HexLH2TankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
     }
@@ -213,18 +213,18 @@
     {
       title =#LOC_NFConstruction_switcher_subtype_variant_fuel_Li
       tankType = Lithium
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = LithiumTankMed
+      transform = HexLiTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
       crashTolerance = 50
     }
     %SUBTYPE[Argon]
     {
       title =  #LOC_NFConstruction_switcher_subtype_variant_fuel_Ar
       tankType = Argon
-      transform = OctoMedBare
-      transform = COLLISION14
-      transform = ArgonTankMed
+      transform =  HexArTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
       crashTolerance = 50
     }
   }
