--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -50,10 +50,19 @@ PART
 
 	MODULE
 	{
+		name = ModuleB9DisableTransform
+		transform = HexArTankMed
+		transform = HexLH2TankMed
+		transform = HexLH2OTankMed
+		transform = HexLiTankMed
+	}
+	
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = #LOC_NFConstruction_switcher_subtype_title
-
+		baseVolume = 400
 		SUBTYPE
 		{
 			name = Solid
@@ -83,7 +92,9 @@ PART
 			name = LFO
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LFO
 			tankType = LFOX
-			transform =
+			transform = HexLFOTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			addedCost = 2696
 			crashTolerance = 50
 		}
@@ -92,7 +103,9 @@ PART
 			name = LF
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_LF
 			tankType = LF
-			transform =
+			transform = HexLFTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			addedCost = 2696
 			crashTolerance = 50
 
@@ -102,7 +115,9 @@ PART
 			name = Ox
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_O
 			tankType = OX
-			transform =
+			transform = HexOXTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -110,7 +125,9 @@ PART
 			name = Support
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Service
 			tankType = MPEC
-			transform =
+			transform = HexMPTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -118,7 +135,9 @@ PART
 			name = Xenon
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Xe
 			tankType = Xenon
-			transform =
+			transform = HexXeTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			crashTolerance = 50
 		}
 		SUBTYPE
@@ -126,7 +145,9 @@ PART
 			name = Ore
 			title= #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore
 			tankType = Ore
-			transform =
+			transform =  HexOreTankMed
+			transform = MediumTruss
+			transform = COLLIDERMED
 			crashTolerance = 50
 		}
 
