Work on truss tank redo

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -55,6 +55,7 @@ PART
 		transform = HexLH2OTankLrg
 		transform = HexLH2TankLrg
 		transform = HexLiTankLrg
+		transform = HexLH2OTankLrgFoil
 	}
 	
 	MODULE
