--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -55,6 +55,7 @@ PART
 		transform = HexLH2TankMed
 		transform = HexLH2OTankMed
 		transform = HexLiTankMed
+		transform = HexLH2OTankMedFoil
 	}
 	
 	MODULE
