--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -53,6 +53,7 @@ PART
 		name = ModuleB9DisableTransform
 		transform = LH2TankLarge
 		transform = LH2OXTankLarge
+		transform = LH2OXTankLargeFoil
 		transform = LithiumTankLarge
 		transform = ArgonTankLarge
 	}
