--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -53,6 +53,7 @@ PART
 		name = ModuleB9DisableTransform
 		transform = LH2TankMed
 		transform = LH2OXTankMed
+		transform = LH2OXTankMedFoil
 		transform = LithiumTankMed
 		transform = ArgonTankMed
 	}
