--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -14,6 +14,7 @@
       transform = OctoLargeBare
       transform = COLLISION15
       transform = LH2OXTankLarge
+	  transform = LH2OXTankLargeFoil
       addedCost = 2696
       crashTolerance = 50
     }
@@ -73,6 +74,7 @@
       tankType = LH2OCryo
       transform = OctoMedBare
       transform = COLLISION14
+	  transform = LH2OXTankMedFoil
       transform = LH2OXTankMed
       addedCost = 1348
       crashTolerance = 50
@@ -133,6 +135,7 @@
       title = #LOC_NFConstruction_switcher_subtype_variant_fuel_LH2O
       tankType = LH2OCryo
       transform = HexLH2OTankLrg
+	  transform = HexLH2OTankLrgFoil
 			transform = LargeTruss
 			transform = COLLIDERLRG
       addedCost = 1348
@@ -195,6 +198,8 @@
       tankType = LH2OCryo
       transform = HexLH2OTankMed
 			transform = MediumTruss
+			transform = HexLH2OTankMedFoil
+			
 			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
