--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -94,13 +94,18 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = Xenon
-	tankMass = 0.000525
+	tankMass = 0.00123046875
 	tankCost = 4.5
 	RESOURCE
 	{
 		name = XenonGas
 		unitsPerVolume = 15.75
 	}
+}
+
+@B9_TANK_TYPE[Xenon]:NEEDS[NearFuturePropulsion]
+{
+	@tankMass = 0.000525
 }
 
 B9_TANK_TYPE
